@@ -63,6 +63,7 @@ typedef enum
     GNOME_CMD_COLOR_MODERN,
     GNOME_CMD_COLOR_FUSION,
     GNOME_CMD_COLOR_CLASSIC,
+    GNOME_CMD_COLOR_DEEP_BLUE,
     GNOME_CMD_COLOR_CUSTOM,
     GNOME_CMD_NUM_COLOR_MODES
 } GnomeCmdColorMode;
